test/scc/decl/semantic-errors/082.a
082.t:1:1: error: '_Dllimport' specifier cannot be applied to variable definition